# benchalot

./: .ci.yml  .gitignore  Makefile  README.md  config.yml  main.c  pyproject.toml  requirements.txt
.ci/: ordertest.sh  test.sh  tuttest.sh
src/: execution.py  log.py  main.py  metrics.py  output.py  preparation.py  validation.py  variance.py
src/benchalot/: config.py  execute.py  interpolate.py  log.py  main.py  output.py  prepare.py  system.py
src/benchmarker/: config.py  execute.py  execution.py  interpolate.py  log.py  main.py  metrics.py  output.py  output_constants.py  preparation.py  prepare.py  structs.py  system.py  utils.py  validation.py  variance.py
src/metrics/: base_metric.py  stdout.py  time.py
tests/: test.py  test_interpolate.py  test_output.py
