[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "benchmarker"
readme = "README.md"
version = "0.0.1"
description = "A tool used for automatic benchmarking of software."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.3",
  "PyYAML>=6.0.2",
  "plotnine>=0.13.6",
  "tabulate>=0.9.0",
  "Cerberus>=1.3.5",
  "yaspin>=3.1.0",
  "numpy>=2.1.1"
]
[tool.hatch.metadata]
allow-direct-references = true
[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "flake8>=7.1.1",
  "mypy>=1.11.2",
  "types-PyYAML>=6.0.12.20240917",
  "pandas-stubs>=2.2.2.240909",
  "tuttest @ git+https://github.com/antmicro/tuttest"
]
[project.scripts]
benchmarker = "benchmarker.main:main"
