[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"
[project]
name = "benchalot"
readme = "README.md"
version = "0.1"
description = "A tool used for automatic benchmarking of software."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.3",
  "PyYAML>=6.0.2",
  "plotnine>=0.13.6",
  "tabulate>=0.9.0",
  "pydantic>=2.9.2",
  "numpy>=2.1.1",
  "tqdm>=4.66.5"
]
[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "flake8>=7.1.1",
  "mypy>=1.11.2",
  "types-PyYAML>=6.0.12.20240917",
  "pandas-stubs>=2.2.2.240909",
  "types-tqdm>=4.66.0.20240417"
]
[project.scripts]
benchalot = "benchalot.main:main"
